--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,41 @@
 .sendForm {
-
+    display: flex;
+    justify-content: space-between;
+    padding: 3.2rem 7rem;
+    align-items: flex-end;
+    border-bottom: .1rem solid #D9D9D9;
 }
 
 .textarea {
-
+    width: 100%;
+    margin-right: 4.4rem;
+    padding: 1.2rem 2.4rem;
+    border: none;
+    background: #F5F7FB;
+    border-radius: 2rem;
+    overflow: hidden;
+}
+.textarea:focus{
+    outline: none;
 }
 
 .button {
-
+    text-align: center;
+    padding: 1rem 3.8rem;
+    border-radius: 5rem;
+    border: none;
+    font-size: 16px;
+    color: #FFFFFF;
+    background: #0066CC;
 }
 
 .button:hover {
-
+    cursor: pointer;
+    transform: translateY(-0.5rem);
+    transition: all 0.2s;
 }
-.button:active {
 
+.button:active {
+    transform: translateY(0);
+    transition: all 0.2s;
 }
