--- a/src/s2-homeworks/hw02/affairs/Affairs.module.css
+++ b/src/s2-homeworks/hw02/affairs/Affairs.module.css
@@ -1,7 +1,7 @@
 .buttonContainer {
     display: flex;
-    gap: 24px;
-    margin-bottom: 32px;
+    gap: 2.4rem;
+    margin: 3.2rem 7rem ;
 }
 
 .all {
@@ -49,7 +49,9 @@
 
 .affairs {
     display: flex;
-    gap: 17px;
+    gap: 1.7rem;
     flex-wrap: wrap;
-    max-width: 450px;
+    max-width: 45rem;
+    margin: 0 7rem;
+    font-size: 16px;
 }
