--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -5,7 +5,7 @@
 .inputAndButtonContainer {
     display: flex;
     padding-top: .9rem;
-    align-items: start;
+    align-items: flex-start;
 
 }
 
