--- a/src/s2-homeworks/hw04/Stand.module.css
+++ b/src/s2-homeworks/hw04/Stand.module.css
@@ -1,7 +1,7 @@
 .stand {
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     padding: 9rem 7rem;
 }
 
