--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,7 +1,7 @@
 .message {
     display: flex;
     flex-grow: 1;
-    justify-content: end;
+    justify-content: flex-end;
     margin: 2.4rem 7rem;
     flex-direction: column;
 }
@@ -9,7 +9,7 @@
 .imageAndText {
     display: flex;
     flex-direction: row-reverse;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .imageAndText img {
@@ -24,7 +24,7 @@
     max-width: 90%;
     position: relative;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     background: #0066CC;
     border-radius: 1rem 1rem 0 1rem;
     margin-right: 2rem;
@@ -58,7 +58,7 @@
 
 .time {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding-right: 1rem;
 
     font-weight: 600;
