--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,71 @@
 .sidebar {
+    visibility: hidden;
+    position: absolute;
+    width: 31rem;
+    min-height: 100%;
+    top: 0;
+    left: 0;
+    background: #FFFFFF;
+    z-index: 999;
+    transform: translateX(-100rem);
+    transition: all 1s;
+    box-shadow: 7px 1px 8px 0 rgba(34, 60, 80, 0.2);
 }
 
 .sidebar.open {
+    visibility: visible;
+    transform: translateX(0);
+    transition: all .5s;
 }
 
 .background {
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #000000;
+    opacity: 0.3;
 }
 
 .nav {
+    margin-top: 6.3rem;
+    display: flex;
+    flex-direction: column;
+    padding-left: 7rem;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+
 }
 
 .nav a {
+    text-decoration: none;
+    margin-bottom: 4.5rem;
+    color: #000000;
 }
 
 .nav a:hover {
+    color: #58ACFF;
 }
 
 .nav a.active {
+    visibility: visible;
+    color: #0059B2;
+    text-decoration-line: underline;
 }
+
 .close {
+    position: absolute;
+    right: 2.4rem;
+    top: 1.6rem;
+    border: none;
+    background: #FFFFFF;
+    cursor: pointer;
+
 }
 
 .close img {
+
 }
