--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,4 +1,7 @@
 .radio {
+    margin-left: 1.3rem;
+    color: red;
+    background: #000000;
 }
 
 .radio::before {
@@ -6,10 +9,20 @@
 
 
 .radio:checked::before {
+    color: red;
+    background: #000000;
+
 }
 
 .label {
+    display: flex;
+    margin-left: 11rem;
 }
-
+span{
+    margin-left: 1.3rem;
+}
 .options {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
 }
