--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,10 +1,13 @@
 .buttonsContainer {
+    padding-top: 25px;
 }
 
 .clock {
+    margin-top: 25px;
 }
 
 .watch {
+    margin-top: 25px;
 }
 
 .watch strong {
