--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -2,21 +2,35 @@
 }
 
 .responseContainer {
+    margin-top: 20px;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
 .imageContainer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .image {
 }
 
-.textContainer{
+.textContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .code {
+    font-size: x-large;
 }
 
 .text {
 }
+
 .info {
 }
