--- a/src/s2-homeworks/hw14/HW14.module.css
+++ b/src/s2-homeworks/hw14/HW14.module.css
@@ -1,7 +1,23 @@
 .tech {
-
+    color: #000;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .loading {
+    color: #4D4D4D;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    text-align: right;
+    width: 468px;
+}
 
+.superDebouncedInput {
+    width: 468px;
+    height: 36px;
+    border-radius: 2px;
+    border: 1px solid #06C;
 }
